--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "extensions": [".js", ".jsx"]
       }
     ],
+    "react/prefer-stateless-function": [0, { "ignorePureComponents": true }],
     "react/jsx-one-expression-per-line": "off",
     "global-require": "off",
     "jsx-one-expression-per-line": 0,
